# ariadne-dbt

./: .gitignore  LICENSE  README.md  ariadne.toml.example  pyproject.toml
benchmarks/: ab_discover.py  ab_entry_models.py  diagnose_misses.py  run.py  session_analysis.py
src/ariadne_dbt/: __init__.py  __main__.py  capsule.py  cli.py  config.py  generator.py  graph.py  indexer.py  models.py  patterns.py  schema.sql  search.py  server.py  usage.py
src/ariadne_dbt/templates/: claude_md.j2  cursor_rules.j2  dag_summary.j2  skill_debug_test.j2  skill_new_model.j2
tests/: conftest.py  test_benchmarks.py  test_capsule.py  test_generator.py  test_graph.py  test_indexer.py  test_integration.py  test_patterns.py  test_search.py  test_usage.py
tests/fixtures/: manifest.json
