[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne-dbt"
version = "0.1.0"
description = "Intelligent context server for AI agents working with dbt projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["dbt", "mcp", "ai", "llm", "context", "analytics", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
]
dependencies = [
    "fastmcp>=2.0.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "watchdog>=4.0",
]

[project.optional-dependencies]
lineage = [
    "sqlglot>=25.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pytest-benchmark>=4.0",
]

[project.scripts]
ariadne = "ariadne_dbt.__main__:main"

[project.urls]
Homepage = "https://github.com/brunoribeirodasilva/ariadne-dbt"
Repository = "https://github.com/brunoribeirodasilva/ariadne-dbt"
Issues = "https://github.com/brunoribeirodasilva/ariadne-dbt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne_dbt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
norecursedirs = ["benchmarks", ".venv", "dist", "build"]
